# space-invaders

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt
settings/: settings.yml
space_invaders/: alien.py  app.py  constants.py  ship.py  utils.py
src/space_invaders/: __main__.py  app.py  constants.py  utils.py
src/space_invaders/entities/: __init__.py
src/space_invaders/scenes/: __init__.py  commands.py  menu.py  pause.py  space_invaders.py
src/space_invaders/scenes/space_invaders/: __init__.py  bootstrap.py  draw_ops.py  helpers.py  models.py  pipeline.py  scene.py  spawn.py  systems.py
src/space_invaders/scenes/space_invaders/systems/: __init__.py  render.py
